AG-3984 - fixed box-shadow being cut off

--- a/community-modules/core/src/styles/ag-grid.scss
+++ b/community-modules/core/src/styles/ag-grid.scss
@@ -631,7 +631,6 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     align-items: center;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     &.ag-row-group {
         align-items: flex-start;
     }
